fix, now can build

--- a/src/app/guess-the-number/guess-the-number.component.html
+++ b/src/app/guess-the-number/guess-the-number.component.html
@@ -39,7 +39,7 @@
     <br>
     <mat-card class="card3">
         <!-- @for(number of arrayOfNumbersGuessed; track number){} -->
-         @for (item of arrayOfNumbersGuessed; track $index) {}
+         <!-- @for (item of arrayOfNumbersGuessed; track $index) {} -->
     </mat-card>
 
 </mat-card>
